<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/phone_num"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="Enter Phone number"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_marginTop="44dp"
        android:gravity="top"
        android:hint="Enter text"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_num"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="#8BC34A"
        android:text="send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>